--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
+body {
+  margin: 50px;
+  padding: 0;
+  font-family: sans-serif;
+  align-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.board {
+  width: 32rem;
+  height: 32rem;
+  margin: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.square {
+  width: 10rem;
+  height: 10rem;
+  margin-right: 0.5rem;
+  border: 1px solid rgb(92, 92, 252);
+  background-color: rgb(131, 131, 235);
+  border-radius: 2px;
+  box-shadow: 0.5px 0.5px 0 0.5px rgb(80, 106, 255);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square:hover {
+  background: rgb(13, 107, 161);
+  cursor: pointer;
+}
+
+.symbol {
+  font-size: 3rem;
+  text-align: center;
 }
