--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,22 @@ body {
   flex-wrap: wrap;
 }
 
+.button {
+  background-color: #30d4c7;
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button:hover {
+  background-color: cadetblue;
+  cursor: pointer;
+}
+
 .square {
   width: 10rem;
   height: 10rem;
